--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,9 @@
       <version>${spring.version}</version>
     </dependency>
     <dependency>
-      <groupId>freemarker</groupId>
+      <groupId>org.freemarker</groupId>
       <artifactId>freemarker</artifactId>
-      <version>2.3.9</version>
+      <version>2.3.31</version>
     </dependency>
     <dependency>
       <groupId>org.hibernate.validator</groupId>
